[tool.black]
line-length = 89
target-version = ['py37']
include = '\.pyi?$'
exclude =  '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | venv
)/
'''

[tool.poetry]
name = "rbac"
version = "0.1.0"
description = "Flask API that uses JSON Web Tokens (JWT) to authenticate HTTP requests."
authors = ["Victor Gomez <victor.gommtz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Bcrypt = "^1.0.1"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.1.0"
flask-restx = "^0.5.1"
Flask-SQLAlchemy = "^2.5.1"
PyJWT = "^2.4.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
urllib3 = "^1.26.11"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"
pytest-black = "^0.3.12"
pytest-clarity = "^1.0.1"
pytest-dotenv = "^0.5.2"
pytest-flake8 = "^1.1.1"
pytest-flask = "^1.2.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
